--- a/templates/SigningTable.j2
+++ b/templates/SigningTable.j2
@@ -1,3 +1,3 @@
 {% for item in dkim_domains %}
-{{ item.domain }} {{ item.selector|default(dkim_default_selector) }}._domainkey.{{ item.domain }}
+{{ item.domain }} {{ item.selector }}._domainkey.{{ item.domain }}
 {% endfor %}
